[package]
name = "arduino-rs"
version = "0.1.0"
authors = ["ayats"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino-rs"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = { version = "0.5.1", features = ["atmega328p", "critical-section-impl"] }
once_cell = { version = "1.18.0", default-features = false, features = ["atomic-polyfill"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
